# automatic-differentiation

./: CMakeLists.txt  README.md  autodiff_binded.py  automatic_differentiation  automatic_differentiation.cpp  automatic_differentiation.py  linear_regression  linear_regression.cpp  neural_network.ipynb  numeric_differentiation  numeric_differentiation.py  pybind_wrapper.cpp
include/: LossFunctions.hpp  Matrix.hpp  NeuralNetwork.hpp  Optimizers.hpp  Var.hpp
include/autodiff/: Matrix.hpp  NeuralNetwork.hpp  OldVar.hpp
src/: LossFunctions.cpp  Matrix.cpp  NeuralNetwork.cpp  Optimizers.cpp  Var.cpp
src/autodiff/: Matrix.cpp  NeuralNetwork.cpp  OldVar.cpp  Var.cpp
